# EIE

./: .gitignore  DevLog.md  LICENSE  README.md  test.txt
HiL/论文/: 硬件在环测试任务调度系统开发1121.doc  重庆大学国家卓越工程师学院本科毕业论文（设计）模版-20241112.doc
HiL/论文/硬件在环测试任务调度系统开发1121.doc.sb-4f18508c-ek0vSk/: ~WRL0917
YMCA/: 1note.md  5-deployment-carla.yaml  5-job-carla.yaml  auto_car.py  deployment-carla.yaml  get_map.py  get_world.py  job-carla-1.yaml  job-carla-1snt.yaml  job-carla-2.yaml  job-carla-2snt.yaml  job-carla-3.yaml  job-carla-3snt.yaml  nfs.pvc.yaml  note.md  persistentvolume-nfs.yaml  persistentvolumeclaim-nfs.yaml  qwq  scene-easy-car.py  service-carla.yaml  testpod.yaml
YMCA/SceneGenerator/: Dockerfile  generator.py  scene.json  scene1.json  scene2.json  scene3.json
YMCA/code/: scene-easy.py
YMCA/doc/: 1.md
YMCA/note/: 1.md
YMCA/test/: auto_car.py  cuda-test-job.yaml  cuda-test.yaml  get_map.py  live.py  nfs.yaml  ubuntu.pod.yaml
YMCA/tool/: get_world.py
YMCA/ymca-scheduler/: Dockerfile  configmap-ymca-scheduler.yaml  deployment-ymca-scheduler-test.yaml  deployment-ymca-scheduler.yaml  go.mod  go.sum  values-gpu-operator.yaml  ymca-scheduler-cr.yaml  ymca-scheduler-crb.yaml
YMCA/ymca-scheduler/cmd/scheduler/: main.go
YMCA/ymca-scheduler/pkg/gpuscheduling/: getgpuinfo.go  gpuscheduling.go  gpuscheduling_test.go
YMCA/数据/: job1-data.xlsx  job2-data.xlsx  job3-data.xlsx
algorithm/1-定位建图/pxy_odm/lio_ndt/data/: odom.csv
algorithm/1-定位建图/pxy_odm/lio_ndt/src/: front_end_node.cpp
algorithm/1-定位建图/点云配准实验代码/: ndt_test.cpp  run_ndt.py
algorithm/2-相机标定实验/: 相机标定实验指导内容.docx
android/: note.md
data/: note.md  ss.md
data/2-task/: 6组-戴兴龙.docx  main.py
data/2-task/code/: cross_line.py  environment.yml  point_clouds.ipynb  图像&点云处理讲解.docx
data/2-task/code/.ipynb_checkpoints/: Untitled-checkpoint.ipynb  point_clouds-checkpoint.ipynb  point_clouds.ipynb
data/3-task/: 第四次作业模板（11.22前）.docx
dev/: DevLog.md
dev/1-task/src/calc_distance/: CMakeLists.txt  package.xml
dev/1-task/src/calc_distance/src/: distance.cpp
dev/1-task/src/show_ss/: CMakeLists.txt  package.xml
dev/1-task/src/show_ss/src/: point_cloud_by_pcl.cpp  rgb_and_depth_by_opencv.cpp
dev/2-task-jiao/: config.yaml
dev/2-task-jiao/src/fusion/: CMakeLists.txt  package.xml
dev/2-task-jiao/src/fusion/include/fusion/: my_camera.hpp  my_config.hpp  my_fusion.hpp  my_lidar.hpp
dev/2-task-jiao/src/fusion/src/: main.cpp  my_fusion.cpp
dev/2-task/src/calibration/: CMakeLists.txt  package.xml
dev/2-task/src/fusion/: CMakeLists.txt
dev/3-task/src/base_bringup/: CMakeLists.txt  package.xml
dev/4-task-jiao/: README.md
dev/4-task-jiao/src/nav_goal_publisher_subscriber/: CMakeLists.txt
dev/4-task-jiao/src/tesseract_image_txt/: CMakeLists.txt
dev/car-test4-master/tesseract_image_txt/: CMakeLists.txt
dev/课后实践2-面向对象/: Makefile  🚗
dev/课后实践2-面向对象/头文件/: 双目摄像头.hpp  智能小车.hpp  轮胎.hpp
dev/课后实践2-面向对象/源文件/: 九轴陀螺仪.cpp  多线激光雷达.cpp  学生信息.cpp  底盘.cpp  液晶显示屏.cpp  电池模块.cpp  轮胎.cpp
dev/课后实践3-设计模式/: main  main.cpp
dev/课后实践3-设计模式/include/: eventpoll.hpp
dev/课后实践3-设计模式/src/: chassis.cpp  lidar.cpp
net/: E2021244+戴兴龙.doc  E2021244+戴兴龙（课堂作业1）.docx
车载软件开发基础/松灵小车任务1/: 松灵小车任务1报告模板.docx
车载软件开发基础/松灵小车任务2/: 松灵小车任务2报告模板.docx
车载软件开发基础/课后实践1-面向过程/: main.cpp
车载软件开发基础/课后实践2-面向对象/: 主.cpp
车载软件开发基础/课后实践2-面向对象/头文件/: AGX套件.hpp  九轴陀螺仪.hpp  多线激光雷达.hpp  学生信息.hpp  底盘.hpp  液晶显示屏.hpp  电池模块.hpp  设备.hpp
车载软件开发基础/课后实践2-面向对象/源文件/: AGX套件.cpp  双目摄像头.cpp  智能小车.cpp
车载软件开发基础/课后实践3-设计模式/: Makefile  车载软件开发基础-课后实践3.docx
车载软件开发基础/课后实践3-设计模式/include/: chassis.hpp  lidar.hpp
车载软件开发基础/课后实践3-设计模式/src/: eventpoll.cpp
车载软件算法基础/实验1-定位建图/: ~$实验报告模板.docx  定位实验报告模板.docx  实验1-定位建图.docx
车载软件算法基础/实验1-定位建图/pxy_odm/lio_ndt/: CMakeLists.txt
车载软件算法基础/实验1-定位建图/点云配准实验代码/: CMakeLists.txt  main.cpp  ndt_test.cpp  optimized_ICP_GN.cpp  run_icp.py
(+22 files in other folders)
