<?xml version="1.0"?>
<package format="2">
  <name>show_ss</name>
  <version>0.0.0</version>
  <description>The show_ss package</description>
  <maintainer email="agilex@todo.todo">agilex</maintainer>
  <license>TODO</license>
  
  <!-- 构建工具依赖项 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 编译时依赖项 -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- 链接时依赖项 -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>

  <!-- 执行时依赖项 -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
